--- a/style.css
+++ b/style.css
@@ -819,7 +819,7 @@ h1.entry-title {
   > .elementor-motion-effects-container
   > .elementor-motion-effects-layer {
   background-color: transparent;
-  background-image: linear-gradient(250deg, #ab20fd 0%, #ab20fd 80%);
+  background-image: linear-gradient(250deg, #b2afb4 0%, #b2adb4ef 80%);
 }
 
 .elementor-417 .elementor-element.elementor-element-b3192e6,
@@ -4075,7 +4075,7 @@ body {
 .row {
   display: flex;
   background-color: transparent;
-  background-image: linear-gradient(250deg, #8152e8 0%, #aa6bf8c4 80%);
+  background-image: linear-gradient(250deg, #86858a 0%, #9f9ca2c4 80%);
 }
 
 .column {
