--- a/style.css
+++ b/style.css
@@ -819,7 +819,7 @@ h1.entry-title {
   > .elementor-motion-effects-container
   > .elementor-motion-effects-layer {
   background-color: transparent;
-  background-image: linear-gradient(250deg, #b2afb4 0%, #b2adb4ef 80%);
+  background-image: linear-gradient(250deg, #9c999e 0%, #aba9ac 80%);
 }
 
 .elementor-417 .elementor-element.elementor-element-b3192e6,
